fix button alignment in safari

--- a/src/styles/modals/signup.scss
+++ b/src/styles/modals/signup.scss
@@ -297,13 +297,11 @@
     overflow: hidden;
     padding: 0 30px;
 
-    > .grid-block {
-      display: inline-block;
-    }
-
     .icons {
-      height: 100%;
+      height: 24px;
       margin-right: 6px;
+      position: relative;
+      top: 4px;
       width: 24px;
     }
   }
